# claude-en-mi-bolsillo

./: .gitignore  CLAUDE.md  README.md  bridge.py  com.example.whatsapp-claude.plist  config.example.json  pyproject.toml
prompts/: ceo.example.md
