[project]
name = "whatsapp-claude-bridge"
version = "0.1.0"
description = "Puente entre WhatsApp personal y Claude Agent SDK con acceso al stack CEO"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "httpx>=0.27.0",
    "mlx-whisper>=0.4.0",
]

[tool.uv]
package = false
